manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: autograder-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autograder
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: autograder
    spec:
      volumes:
      - name: app
        emptyDir: {}
        
      containers:
      - name: autograder-container
        image: autograder-is:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
            
        volumeMounts:
        - name: app
          mountPath: /app/assignments
