manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: autograder-service
  namespace: ope-test
spec:
  clusterIP: 172.30.164.9
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.164.9
  type: ClusterIP
  selector:
    app: autograder
